--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 </head>
 <body>
     <div >
-        <h1>rajith is here!</h1>
         <div id="root">
             
         </div>
     </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-    <script src="./App.js">
+    <script type="module" src="./App.js">
 
     </script>
 </body>
