--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <script type="module" src="./App.js">
+    <script type="module" src="./src/App.js">
 
     </script>
 </body>
